--- a/index.html
+++ b/index.html
@@ -218,6 +218,16 @@
             <img src="pictures\Screenshot 2024-03-01 210741.png" alt="Accessories">
         </div>
 
+        <div class="image-container">
+            <img src="pictures\Screenshot 2024-03-03 163851.png" alt="Robotic Arm">
+            <div class="text-container">
+                <h2>ROBOTIC ARM</h2>
+                <p>One of my major projects I have ever done till now is designing of an fully functional Robotic arm with designing from connection of links to creating a new end-effector. fully well planned and well strucutred roboic arm. At its core, a complex network of actuators, sensors, and precision mechanics allows for intricate and coordinated movements. The internal structure comprises multiple joints and linkages, ensuring flexibility and accurate positioning. As the complexity transforms into a visually appealing exterior, sleek materials, and streamlined shapes are often employed. The outer design prioritizes user interface, with intuitive control panels and ergonomic considerations for human interaction. Attention to detail in the finishing touches enhances both functionality and aesthetics, creating a harmonious balance between technological sophistication and visual elegance. The final result is a robotic arm that seamlessly integrates advanced engineering with a polished and inviting exterior.(External and Internal)</p>
+                Here is the link for the model to look in -
+                <a href=https://a360.co/3G14FvY target="_blank"> 3D view </a>.
+            </div>
+        </div>
+
 
 
         <!-- Add more image-container elements as needed -->
