--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </div>
 
     <div class="more-about-me-bar">
-        <a>----------------|| MANISH KUMAR VELLIBOINA ||----------------</a>
+        <a>----------------|| MANISH KUMAR VELIBOINA ||----------------</a>
     </div>
     <div class="white-border"></div>
 
